--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -42,9 +42,9 @@
 .new-message {
     height: 1rem;
     width: 1rem;
-    background: red;
-    border: solid 2px red;
+    background: #409ee3;
     float: right;
+    overflow: hidden;
     border-radius: 15%;
 }
 
